--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,9 @@
     "@mui/material": "^5.13.3",
     "@reduxjs/toolkit": "^1.9.5",
     "axios": "^1.4.0",
+    "fs": "^0.0.1-security",
+    "jsmpeg-player": "^3.0.3",
+    "node-rtsp-stream": "^0.0.9",
     "peerjs": "^1.4.7",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -24,7 +27,10 @@
     "react-router-dom": "^6.11.2",
     "redux": "^4.2.1",
     "redux-persist": "^6.0.0",
-    "socket.io-client": "^4.6.1"
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.6.2",
+    "socket.io-client": "^4.6.2",
+    "websocket": "^1.0.34"
   },
   "devDependencies": {
     "@types/react": "^18.0.37",
