--- a/server/package.json
+++ b/server/package.json
@@ -7,18 +7,28 @@
   "license": "ISC",
   "main": "index.js",
   "scripts": {
-    "start": "nodemon index.js",
+    "start": "nodemon liveIndex.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "dependencies": {
+    "@ffmpeg-installer/ffmpeg": "^1.1.0",
     "body-parser": "^1.20.2",
+    "cors": "^2.8.5",
     "ejs": "^3.1.9",
     "express": "^4.18.2",
+    "ffmpeg": "^0.0.4",
+    "fluent-ffmpeg": "^2.1.2",
     "http-errors": "^2.0.0",
+    "node-media-server": "^2.6.2",
+    "node-rtsp-stream": "^0.0.9",
     "nodemon": "^2.0.22",
+    "path": "^0.12.7",
     "pino": "^8.14.1",
     "pino-http": "^8.3.3",
     "pino-pretty": "^10.0.0",
-    "socket.io": "^4.6.1"
+    "simple-peer": "^9.11.1",
+    "socket.io": "^4.6.2",
+    "socket.io-stream": "^0.9.1",
+    "ws": "^8.13.0"
   }
 }
